--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <button id="btnRestart" type="button" title="返回设置">返回设置</button>
           <button id="btnEndTurn" class="primary" type="button" title="结束本回合">结束回合</button>
           <button id="btnTune" type="button" title="布局调参">调布局</button>
+          <button id="btnFullscreen" type="button" title="全屏/退出全屏">全屏</button>
         </div>
       </div>
 
@@ -180,6 +181,48 @@
         const pairs = window.__IMAGE_PAIRS__ || [];
         window.initUi(pairs);
       }
+
+      // 全屏功能
+      const btnFullscreen = document.getElementById('btnFullscreen');
+      if (btnFullscreen) {
+        btnFullscreen.addEventListener('click', () => {
+          if (!document.fullscreenElement) {
+            // 进入全屏
+            document.documentElement.requestFullscreen().then(() => {
+              btnFullscreen.textContent = '退出全屏';
+            }).catch(err => {
+              console.warn('无法进入全屏:', err);
+            });
+          } else {
+            // 退出全屏
+            document.exitFullscreen().then(() => {
+              btnFullscreen.textContent = '全屏';
+            }).catch(err => {
+              console.warn('无法退出全屏:', err);
+            });
+          }
+        });
+
+        // 监听全屏状态变化（用户按ESC退出全屏时更新按钮文字）
+        document.addEventListener('fullscreenchange', () => {
+          if (!document.fullscreenElement) {
+            btnFullscreen.textContent = '全屏';
+          } else {
+            btnFullscreen.textContent = '退出全屏';
+          }
+        });
+      }
+
+      // 移动端：首次点击游戏区域时自动尝试进入全屏
+      let hasTriedAutoFullscreen = false;
+      document.addEventListener('touchstart', () => {
+        if (!hasTriedAutoFullscreen && !document.fullscreenElement) {
+          hasTriedAutoFullscreen = true;
+          document.documentElement.requestFullscreen().catch(() => {
+            // 静默失败，不打扰用户
+          });
+        }
+      }, { once: true });
     </script>
   </body>
 </html>
