--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="topbar">
         <div class="title">
           <h1>OLD MAID · 抽乌龟（儿童英语学习版）<span id="levelIndicator" style="margin-left: 12px; font-size: 14px; color: rgba(255,255,255,0.7);"></span></h1>
-          <div class="sub">英文图片 ↔ 动物图片配对 · 逆时针轮流 · 抽上家牌 · 匹配规则：*_A ↔ *_B</div>
+          <div class="sub">英文图片 ↔ 动物图片配对 · 逆时针轮流 · 抽上家牌 · 匹配规则：动物图片和对应英文</div>
         </div>
         <div class="btnRow">
           <button id="btnRestart" type="button" title="返回设置">返回设置</button>
