图片优化：压缩大图片并添加所有素材到预加载 - 压缩 card-back.png: 7.4MB → 1.8MB - 压缩 table.png: 14MB → 2.5MB - 压缩 round-start-panel.png: 6.9MB → 1.3MB - 添加所有UI按钮和背景图到预加载列表 - 总体减少约 25MB 图片大小

--- a/index.html
+++ b/index.html
@@ -184,10 +184,19 @@
           images.push(pair.A);
           images.push(pair.B);
         });
-        // 添加Joker卡
+
+        // 添加游戏核心图片
         images.push('./assets/joker.png');
-        // 添加卡背
         images.push('./assets/card-back.png');
+        images.push('./assets/table.png');
+
+        // 添加UI按钮图片
+        images.push('./assets/ui_buttons/hint.png');
+        images.push('./assets/ui_buttons/match.png');
+        images.push('./assets/ui_buttons/endturn.png');
+        images.push('./assets/ui_buttons/hand-count.png');
+        images.push('./assets/ui_buttons/hint-hand.png');
+        images.push('./assets/ui_buttons/round-start-panel.png');
 
         let loaded = 0;
         const total = images.length;
