修复Safari兼容性问题：移除自动全屏，添加webkit前缀支持

--- a/index.html
+++ b/index.html
@@ -286,47 +286,48 @@
         );
       }
 
-      // 全屏功能
+      // 全屏功能（兼容 Safari）
       const btnFullscreen = document.getElementById('btnFullscreen');
       if (btnFullscreen) {
         btnFullscreen.addEventListener('click', () => {
-          if (!document.fullscreenElement) {
-            // 进入全屏
-            document.documentElement.requestFullscreen().then(() => {
-              btnFullscreen.textContent = '退出全屏';
-            }).catch(err => {
-              console.warn('无法进入全屏:', err);
-            });
+          const elem = document.documentElement;
+          const isFullscreen = document.fullscreenElement || document.webkitFullscreenElement;
+
+          if (!isFullscreen) {
+            // 进入全屏（兼容 Safari）
+            const requestFullscreen = elem.requestFullscreen || elem.webkitRequestFullscreen;
+            if (requestFullscreen) {
+              requestFullscreen.call(elem).then(() => {
+                btnFullscreen.textContent = '退出全屏';
+              }).catch(err => {
+                console.warn('无法进入全屏:', err);
+              });
+            }
           } else {
-            // 退出全屏
-            document.exitFullscreen().then(() => {
-              btnFullscreen.textContent = '全屏';
-            }).catch(err => {
-              console.warn('无法退出全屏:', err);
-            });
+            // 退出全屏（兼容 Safari）
+            const exitFullscreen = document.exitFullscreen || document.webkitExitFullscreen;
+            if (exitFullscreen) {
+              exitFullscreen.call(document).then(() => {
+                btnFullscreen.textContent = '全屏';
+              }).catch(err => {
+                console.warn('无法退出全屏:', err);
+              });
+            }
           }
         });
 
-        // 监听全屏状态变化（用户按ESC退出全屏时更新按钮文字）
-        document.addEventListener('fullscreenchange', () => {
-          if (!document.fullscreenElement) {
-            btnFullscreen.textContent = '全屏';
-          } else {
-            btnFullscreen.textContent = '退出全屏';
-          }
-        });
+        // 监听全屏状态变化（兼容 Safari）
+        document.addEventListener('fullscreenchange', updateFullscreenButton);
+        document.addEventListener('webkitfullscreenchange', updateFullscreenButton);
+
+        function updateFullscreenButton() {
+          const isFullscreen = document.fullscreenElement || document.webkitFullscreenElement;
+          btnFullscreen.textContent = isFullscreen ? '退出全屏' : '全屏';
+        }
       }
 
-      // 移动端：首次点击游戏区域时自动尝试进入全屏
-      let hasTriedAutoFullscreen = false;
-      document.addEventListener('touchstart', () => {
-        if (!hasTriedAutoFullscreen && !document.fullscreenElement) {
-          hasTriedAutoFullscreen = true;
-          document.documentElement.requestFullscreen().catch(() => {
-            // 静默失败，不打扰用户
-          });
-        }
-      }, { once: true });
+      // 移动端：移除自动全屏功能，避免 Safari 错误
+      // Safari 在移动端不支持全屏 API
     </script>
   </body>
 </html>
