更新游戏规则说明：改为分条列表，更清晰易懂

--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
           </div>
 
           <div class="footerNote">
-            规则：轮到你时从上家背面抽 1 张加入手牌；你需要自己在手牌里找“同前缀”的两张牌配对（例如 2_1_A ↔ 2_1_B），选中两张后点“尝试配对并丢弃”。
+            规则：<br>
+            1. 轮到你时你需要自己在手牌里找动物牌和与它对应的英文牌（如：蛇牌和snake牌，连续点出这两张），选中两张后点"匹配出牌"。<br>
+            2. 不能继续匹配后，点击展开上家手牌（左手边）抽 1 张加入手牌；<br>
+            3. 所有操作结束后点击"结束回合"<br>
+            4. 乌龟牌不可与任何牌匹配，最后手中剩余乌龟牌时，判负
           </div>
         </div>
       </div>
